fix services provided

--- a/index.html
+++ b/index.html
@@ -102,14 +102,10 @@
 						</header>
 						<div class="content">
 							<p><b>We offer the following services which are available in daily(drop in classes), Weekly or monthly formats. The services can be taken in a combination too</b></p>
-							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mysuru style practice</br>
-							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Pranayama</br>
-							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mudra classes</br>
-							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Teacher training</br>
-							<p><b>Mysuru style practice: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
-						    <p><b>Pranayama: </b>Pranayama is a fundamental aspect of yoga practice that involves various breathing techniques. In Sanskrit, "prana" means life force or vital energy, and "ayama" means control or expansion. Therefore, pranayama can be understood as the practice of controlling or expanding one's life force through breath.</p>
-							<p><b>Mudra: </b>In yoga and meditation, a mudra is a symbolic or ritual gesture, usually performed with the hands and fingers. Mudras can facilitate the flow of energy in the body and are often used in conjunction with pranayama (breathing exercises) and meditation practices.</b></p>
-						    <p><b>Teacher Training: </b>Teacher training has the following included 
+							<p><img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">  <b>Mysuru style practice: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
+						    <p><img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon"> <b>Pranayama: </b>Pranayama is a fundamental aspect of yoga practice that involves various breathing techniques. In Sanskrit, "prana" means life force or vital energy, and "ayama" means control or expansion. Therefore, pranayama can be understood as the practice of controlling or expanding one's life force through breath.</p>
+							<p><img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon"> <b>Mudra: </b>In yoga and meditation, a mudra is a symbolic or ritual gesture, usually performed with the hands and fingers. Mudras can facilitate the flow of energy in the body and are often used in conjunction with pranayama (breathing exercises) and meditation practices.</b></p>
+						    <p><img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon"> <b>Teacher Training: </b>Teacher training has the following included 
 							<table>
 								<tr>
 									<th>Time</th>
