add review in banner

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 			<div id="infoBanner" class="info-banner">
 				<span class="close" onclick="hideBanner()">&times;</span>
-				<p><b>Shashikala will be teaching classes in Bhagsunag, Himachal from April 4 till June 12, 2024. <a href="#contact">   Contact Us</a> for more details. Refer to types of<a href="#services"> classes offered</a>.</b></p>
-				<!-- <video controls style="width: 100%; height: 10%;">
+				<p><b>Shashikala will be teaching classes in Bhagsunag, Himachal from April 4 till June 12, 2024. <a href="#contact" onclick="hideBanner()">  <span class="blink">Contact Us</span></a> for more details. Refer to types of<a href="#services"> classes offered</a>.</b></p>
+
+				<p><b>Help us spread the word by writing a review if you have taken classes with us. <a href="https://www.google.com/search?q=The+Three+Sisters+Yoga+Shala&sca_esv=224fa05bca59979e&ei=8gPrZZaACq-s5NoPheuvkA4&ved=0ahUKEwiWwdfn1OSEAxUvFlkFHYX1C-IQ4dUDCBE&uact=5&oq=The+Three+Sisters+Yoga+Shala&gs_lp=Egxnd3Mtd2l6LXNlcnAiHFRoZSBUaHJlZSBTaXN0ZXJzIFlvZ2EgU2hhbGEyCxAAGIAEGKIEGLADMgsQABiJBRiiBBiwA0iNB1ClBVilBXABeACQAQCYAQCgAQCqAQC4AQPIAQD4AQGYAgGgAgSYAwCIBgGQBgKSBwExoAcA&sclient=gws-wiz-serp#lrd=0x3baf700f0d8fac1b:0xbf78d0b62c5ed31b,3,,,," target="_blank"><span class="blink">Leave a review</span></a></p></b></p><!-- <video controls style="width: 100%; height: 10%;">
 					<source src="video/promotion/yoga-invite.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video> -->
