add teacher training full schedule

--- a/gallery.html
+++ b/gallery.html
@@ -157,7 +157,7 @@
 				<div class="mySlides">
 					<img src="story/images/adjustment_uttthitha.jpg" alt="Uttthitha adjustment">
 					<div class="slide-description">
-						<h3>Utthita Trikonasana Adjustment</h3>
+						<h3>Purvottanasana Adjustment</h3>
 						<p>Precise adjustment of the extended triangle pose to help align the spine and elongate the torso, 
 						creating space for proper rotation and breath.</p>
 					</div>
