--- a/services.html
+++ b/services.html
@@ -117,16 +117,36 @@
 						</tr>
 						<tr>
 							<td>6-8 am</td>
-							<td>Practice</td>
+							<td>Practice and Pranayama</td>
+						</tr>
+                        <tr>
+							<td>8-10 am</td>
+							<td>Breakfast and Free time</td>
 						</tr>
 						<tr>
-							<td>10-12 am</td>
-							<td>Stretching and Adjustments</td>
+							<td>10-12 pm</td>
+							<td>Stretching exercises according to posture and Posture adjustments</td>
+						</tr>
+                        <tr>
+							<td>12-2 pm</td>
+							<td>Lunch Break</td>
 						</tr>
 						<tr>
-							<td>2-4 pm</td>
-							<td>Mudras and Full Vinyasa</td>
+							<td>2-2.45 pm</td>
+							<td>Mudras Yoga</td>
 						</tr>
+                        <tr>
+							<td>3-3-45 pm</td>
+							<td>Ashtanga Full Vinyasa Yoga</td>
+						</tr>
+                        <tr>
+							<td>4-5 pm</td>
+							<td>Counting and how to teach beginners</td>
+						</tr>
+                        <tr>
+                            Every Saturday and Moon Days are Holidays.
+                        </tr>
+                        
 					</table>
 				</div>
 			</div>
