add google tags

--- a/gallery.html
+++ b/gallery.html
@@ -132,6 +132,15 @@
 			}
 		</style>
 	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LX7PY7E3Y1"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-LX7PY7E3Y1');
+	</script>
 	<body>
 		<header class="header">
 			<h1>Yoga Gallery - Adjustments & Postures</h1>
